[package]
name = "rustic-typster"
version = "0.1.0"
authors = ["blaisdellma <blaisdellma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
futures = "0.3.8"
futures-timer = "3.0.2"
reqwest = "0.10.9"
tokio = {version = "0.2.5", features = ["full"]}
crossterm = {version = "0.18.2", features = ["event-stream"]}
select = "0.5.0"
serde_json = "1.0.59"
slog = {version = "2.5.2", features = ["max_level_trace","release_max_level_warn"]}
slog-term = "2.6.0"
slog-async = "2.5.0"
scopeguard = "1.1.0"
