[package]
name = "rustic-typster"
version = "0.1.0"
authors = ["blaisdellma <blaisdellma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures = "0.3"
futures-timer = "3.0"
reqwest = "0.11"
tokio = {version = "1.26", features = ["full"]}
crossterm = {version = "0.26", features = ["event-stream"]}
select = "0.6"
serde_json = "1.0"
slog = {version = "2.7", features = ["max_level_trace","release_max_level_warn"]}
slog-term = "2.9"
slog-async = "2.7"
scopeguard = "1.1"

